@@ -391,8 +391,13 @@ class DrupalWebTestCase {
     $type = $forced + $settings + $defaults;
     $type = (object)$type;
 
-    node_type_save($type);
+    $saved_type = node_type_save($type);
     node_types_rebuild();
+
+    $this->assertEqual($saved_type, SAVED_NEW, t('Created content type %type.', array('%type' => $type->type)));
+
+    // Reset permissions so that permissions for this content type are available.
+    $this->checkPermissions(array(), TRUE);
 
     return $type;
   }
